--- a/TSP/TSP.vcxproj.filters
+++ b/TSP/TSP.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="TSP.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="tsp1.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="tsp1.h">
+      <Filter>Pliki źródłowe</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
