--- a/TSP/TSP.vcxproj.filters
+++ b/TSP/TSP.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="tsp1.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="ACO optimalization2.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="tsp1.h">
